belajar-kubernetes/nginx-node-selector.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
spec:
  nodeSelector:
    ssd: "true"
  containers:
  - name: nginx
    image: nginx
    ports:
    - containerPort: 80
