belajar-kubernetes/nginx-with-label.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-with-label
  labels:
    team: finance
    version: 1.4.5
    enviroment: production
spec:
  containers:
  - name: nginx
    image: nginx
    ports:
    - containerPort: 80
